<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemCreateEntry"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/new_entry" />
    <item
        android:id="@+id/menuSync"
        android:title="@string/Sync">
        <menu>
            <item
                android:id="@+id/menuItemDownloadData"
                android:enabled="true"
                android:title="@string/download_data" />
            <item
                android:id="@+id/menuItemUploadData"
                android:enabled="true"
                android:title="@string/upload_data" />
            <item
                android:id="@+id/menuItemSyncAccount"
                android:title="@string/menu_sync_account" />
        </menu>
    </item>
    <item
        android:id="@+id/menuItemChangePassphrase"
        android:title="@string/changePassphrase" />
    <item
        android:id="@+id/menuItemPerformance"
        android:title="@string/performanceTest" />
    <item
        android:id="@+id/menuItemAbout"
        android:title="@string/about" />
    <item
        android:id="@+id/menuItemExit"
        android:title="@string/exit" />
</menu>