<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="fill">

    <EditText
        android:id="@+id/editEntryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:ems="10"
        android:hint="@string/label_Label"
        android:inputType="text"
        android:singleLine="true">

        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/editEntryTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEntryLabel"
        android:ems="10"
        android:hint="@string/label_Tags"
        android:inputType="text"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editEntryData"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEntryTags"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/label_Data"
        android:inputType="textMultiLine"
        android:singleLine="false"/>

</RelativeLayout>
